# zbze_ocr

./: .env.example  .gitignore  LICENSE  README.md  README.ru.md  airflow.cfg  airflow.cfg.template  pyproject.toml  readme.md  requirements.txt  todo.md  webserver_config.py
cli/: Makefile  README.md  __main__.py  apply_img_filters.py  box_processing.py  join_jpeg_to_pdf.py  ocr_text_diff.py  rotate_img.py  run_tesseract_for_page.py  smooth_img.py  split_book_layout.py  split_pdf_to_jpeg.py  standartize_img.py  unpaper_img.py
cli/logic/: apply_img_filters.py  box_processing.py  cli_utils.py  config.py  rotate_img.py  smooth_img.py  split_book_layout.py  standartize.py
dags/: 00_image_generate.py  00_train_tesseract.py  01_pdf_processing.py  02_langs_compare.py
dags/src/: const.py  diff_by_langs.py  hocr_beatify.py  html_diff_by_langs.py  image_generator.py  lang_compare.py  path_utils.py  prepare_tessdata.py  text_cleaner.py
docs/: context_for_llm.md  main.md
docs/airflow/: setup.md
notebooks/: 00_clean_text.ipynb  00_collect_lines_by_char_ngrams.ipynb  00_collect_text.ipynb  00_collect_text_from_freq.ipynb  00_extract_collocation.ipynb  01_create_wlist_for_tesseract.ipynb  02_generate_image.ipynb  02_prepare_ground_truth.ipynb  02_v2_generate_image.ipynb  04_calc_conf.ipynb  04_compare_orig_text_ocr_text.ipynb  04_compare_two_lang_by_conf.ipynb  04_visualize_compare.ipynb  05_diff_char_ambiq.ipynb  05_extract_lines_by_diff_words.ipynb  06_hocr_buetify.ipynb  07_extract_invalid_chars.ipynb  08_find_new_word_for_dawg.ipynb  09_spell_check.ipynb  09_tokenizer__unigram_from_text.ipynb  09_trie_spell_check.ipynb  10_collect_by_token_dist.ipynb  10_collect_regexp.ipynb  10_import_pdfs.ipynb  10_regex_stemmer.ipynb  10_regex_tree_stemmer.ipynb  11_morph_template_tree.ipynb  11_morph_tree.ipynb  11_pdf_processing_dag_run.ipynb  12_collect_not_exist_words.ipynb  12_test_tesseract_models.ipynb  13_prepare_box_for_train.ipynb  14_prepare_ground_truth_v2.ipynb  pil_crop_image_box.ipynb
notebooks/img_prepocessing/: delete_large_black_area.ipynb  image_descew_by_text.ipynb  image_processing.ipynb  img_width_stardartize.ipynb  split_book_layout.ipynb  todo_delete_finger.ipynb  todo_find_page_number.ipynb  todo_fix_perspective.ipynb  todo_skimage.ipynb
tesseract/: ocrmypdf_kbd.Dockerfile  readme.md
tesseract/tesstrain/: readme.md
web/: Dockerfile  app.py  const.py  ocr_processor.py  ws.py
(+127 files in other folders)
