[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zbze-ocr"
version = "0.1.0"
description = "OCR processing toolkit with Tesseract, image preprocessing, and web interface"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ZBZE OCR Team"}
]
keywords = ["ocr", "tesseract", "image-processing", "pdf", "airflow", "django"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics :: Capture :: Scanners",
    "Topic :: Text Processing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "matplotlib==3.8.2",
    "pillow==10.2.0",
    "seaborn==0.13.2",
    "tqdm==4.66.1",
    "beautifulsoup4==4.12.2",
    "lxml==4.9.3",
    "ipython==8.12.3",
    "jupyter==1.0.0",
    # spellchecker
    "nltk==3.8.1",
    "tokenizers==0.15.1",
    "pyahocorasick==2.0.0",
    "marisa-trie==1.1.0",
    "scikit-learn==1.3.2",
    "fuzzywuzzy==0.18.0",
    # cli commands
    "click==8.1.7",
    "opencv-python==4.8.0.76",
    "pytesseract==0.3.10",
    "ocrmypdf==16.3.1",
    "pypdf==4.3.1",
    "pikepdf==8.15.1",
    "PyMuPDF==1.24.9",
    # utilities
    "python-slugify[unidecode]==8.0.1",
    "pysnooper==1.2.0",
    "numpy==1.24.4",
    "aiohttp==3.8.6",
    "Jinja2==3.1.2",
    "uvloop==0.19.0",
    "Levenshtein==0.25.1",
    "pandas==2.0.3",
]

[project.optional-dependencies]
airflow = [
    "apache-airflow[celery,postgres,redis,pandas,ssh]==2.7.2",
    "apache-airflow-client==2.7.2",
]
web = [
    "Django==5.0.6",
    "djangorestframework==3.15.1",
    "django-simple-history==3.7.0",
    "django-filter==24.2",
]
dev = [
    "black[jupyter]==23.9.1",
    "isort==5.13.2",
]
all = [
    "zbze-ocr[airflow,web,dev]",
]

[project.scripts]
zbze-ocr = "cli.__main__:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "dags*", "web*"]
namespaces = false

[tool.black]
line-length = 120

[tool.isort]
py_version = 311
profile = "black"
skip_gitignore = true
line_length = 120
src_paths = ["cli", "dags"]
atomic = true
